<resources>
    <string name="app_name">GetTix</string>
    <string name="title_activity_detail">פרטי מופע</string>
    <string name="title_activity_seats">הזמנת כרטיסים</string>
    <string name="title_activity_no_seats">הזמנת כרטיסים</string>
    <string name="title_activity_payment">הזנת פרטים</string>
    <string name="title_activity_management">מסך מפיק</string>
    <string name="title_activity_events">מופעים</string>
    <string name="title_activity_halls">אולמות</string>
    <string name="title_activity_event_orders">הזמנות</string>

    <!-- for main activity -->
    <string name="find_events_label">מצא את האירוע שלך:</string>
    <string name="filter_events_label">סינון נוסף לפי...</string>
    <string name="filter_events_selected">סינון נוסף לפי</string>
    <string name="filter_events_colon">:</string>
    <string name="event_date_hint">תאריך</string>
    <string name="event_hall_hint">אולם</string>
    <string name="event_city_hint">עיר</string>
    <string name="search_events_button">חפש</string>

    <!-- for popup menus -->
    <string name="action_view_event_orders">צפה בהזמנות...</string>
    <string name="action_new_event_based">צור מופע חדש בסדרה...</string>
    <string name="action_edit_event">ערוך מופע</string>
    <string name="action_delete_event">בטל מופע</string>
    <string name="action_edit_hall">ערוך אולם</string>

    <!-- for events details activity -->
    <string name="book_tickets_button">הזמן כרטיסים</string>
    <string name="action_share">שתף</string>

    <!-- for seats / no seats activity -->
    <string name="select_seats_label">בחר מקומות ישיבה באולם:</string>
    <string name="seat_available">פנוי</string>
    <string name="seat_occupied">תפוס</string>
    <string name="seat_chosen">הבחירה שלך</string>
    <string name="enter_coupon_code_label">אם ברשותך קוד קופון הזן אותו כעת:</string>
    <string name="coupon_code_hint">קוד קופון</string>
    <string name="check_coupon_button">שלח</string>
    <string name="next_button">הבא</string>

    <!-- for payment activity -->
    <string name="tickets_saved_message">הכרטיסים נשמרים עבורכם ל-10 דקות. לאחר מכן, ישוחררו בחזרה לקנייה ע\"י הציבור.</string>
    <string name="personal_details_title">פרטים אישיים</string>
    <string name="full_name_label">שם מלא:</string>
    <string name="phone_label">טלפון:</string>
    <string name="email_label">דוא\"ל:</string>
    <string name="credit_card_label">הזן פרטי אשראי:</string>
    <string name="place_order_button">בצע הזמנה</string>

    <!-- for confirmation activity -->
    <string name="order_confirmation_title">אישור הזמנה</string>
    <string name="order_number">מספר הזמנה: </string>
    <string name="order_total_price">סכום כולל: </string>
    <string name="order_customer_details">פרטי המזמין:</string>
    <string name="goto_home_button">חזרה לדף הבית</string>

    <!-- for management screens -->
    <string name="action_management">למסכי ניהול והפקה</string>
    <string name="action_sign_out">התנתק...</string>
    <string name="action_add_item">צור חדש</string>
    <string name="your_events_label">האירועים שלך:</string>
    <string name="event_orders_label">הזמנות:</string>
    <string name="events_button">מופעים</string>
    <string name="halls_button">אולמות</string>
    <string name="reports_button">דו\"חות</string>

    <!-- for event edit activity -->
    <string name="event_create_title">יצירת מופע</string>
    <string name="event_edit_title">עריכת מופע</string>
    <string name="event_title_label">שם המופע:</string>
    <string name="event_category_label">תחום:</string>
    <string name="event_hall_label">אולם:</string>
    <string name="event_date_label">תאריך:</string>
    <string name="event_hour_label">שעה:</string>
    <string name="event_duration_label">משך המופע (בדקות):</string>
    <string name="event_description_label">תיאור המופע:</string>
    <string name="event_performer_label">שם האמן המבצע:</string>
    <string name="event_price_label">מחיר כרטיס:</string>
    <string name="event_coupon_code_label">קוד קופון (אם יש):</string>
    <string name="event_discounted_price_label">מחיר כרטיס מוזל:</string>
    <string name="event_poster_label">להעלאת פוסטר...</string>
    <string name="event_marked_seats_label">אירוע עם מקומות מסומנים</string>
    <string name="event_max_capacity_label">תכולה מירבית:</string>
    <string name="event_sold_out_label">סולד אאוט</string>
    <string name="save_event_button">שמור</string>

    <!-- for hall edit activity -->
    <string name="hall_create_title">יצירת אולם</string>
    <string name="hall_edit_title">עריכת אולם</string>
    <string name="hall_name_label">שם האולם:</string>
    <string name="hall_address_label">כתובת:</string>
    <string name="hall_city_label">עיר:</string>
    <string name="hall_official_website_label">אתר רשמי:</string>
    <string name="hall_rows_label">מספר שורות:</string>
    <string name="hall_columns_label">מספר מושבים בשורה:</string>
    <string name="save_hall_button">שמור</string>

</resources>
