<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:grid="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    android:layout_gravity="right"
    android:gravity="right"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="app.com.almogrubi.idansasson.gettix.MainActivity">

    <TextView
        android:id="@+id/tv_find_label"
        android:text="@string/find_events_label"
        android:padding="10dp"
        style="@style/TextAppearance.AppCompat.Subhead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/tab_margin"
        android:orientation="horizontal">

        <TextView
            android:text="@string/event_category_label"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Spinner
            android:id="@+id/sp_category"
            style="@style/Widget.AppCompat.Spinner.DropDown"
            android:layout_marginStart="8dp"
            android:layout_width="@dimen/short_medium_inputview_width"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/tab_margin"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cb_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_events_label" />

        <Spinner
            android:id="@+id/sp_filter_key"
            style="@style/Widget.AppCompat.Spinner.DropDown"
            android:layout_marginEnd="0dp"
            android:layout_width="115dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_filter_colon"
            android:text="@string/filter_events_colon"
            android:layout_marginStart="0dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/quadruple_tab_margin" >

        <EditText
            android:id="@+id/et_find_by_date"
            android:hint="@string/event_date_hint"
            android:clickable="true"
            android:focusable="false"
            android:layout_marginStart="@dimen/double_tab_margin"
            android:layout_marginBottom="8dp"
            style="@style/AppEditTextStyle" />

        <AutoCompleteTextView
            android:id="@+id/et_find_by_hall"
            android:layout_marginStart="@dimen/double_tab_margin"
            android:layout_marginBottom="8dp"
            style="@style/AppAutoCompleteTextViewStyle"
            android:hint="@string/event_hall_hint"
            android:ems="10" />

        <EditText
            android:id="@+id/et_find_by_city"
            android:hint="@string/event_city_hint"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="@dimen/double_tab_margin"
            style="@style/AppEditTextStyle" />

    </LinearLayout>

    <Button
        android:id="@+id/bt_search_events"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/double_tab_margin"
        android:padding="@dimen/double_tab_margin"
        android:text="@string/search_events_button" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorPrimary" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/searched_events_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical" />

</LinearLayout>
