<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:alignmentMode="alignBounds"
            android:focusableInTouchMode="true"
            android:layout_margin="3dp"
            android:layout_marginStart="4dp"
            android:layoutDirection="rtl"
            android:columnCount="2"
            android:rowCount="8">

            <TextView
                android:id="@+id/tv_hall_edit_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hall_create_title"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:padding="@dimen/double_tab_margin"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_columnSpan="2"
                style="@style/TextAppearance.AppCompat.Headline" />

            <TextView
                android:id="@+id/tv_hall_name"
                android:text="@string/hall_name_label"
                android:layout_row="1"
                android:layout_column="0"
                style="@style/EditScreenTextViewStyle"
                android:textSize="@dimen/management_text_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/et_hall_name"
                style="@style/AppEditTextStyle"
                android:textSize="@dimen/management_text_size"
                android:layout_column="1"
                android:layout_gravity="right"
                android:layout_row="1" />

            <TextView
                android:id="@+id/tv_hall_address"
                android:text="@string/hall_address_label"
                android:textSize="@dimen/management_text_size"
                android:layout_row="2"
                android:layout_column="0"
                style="@style/EditScreenTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/et_hall_address"
                style="@style/AppLongEditTextStyle"
                android:layout_width="@dimen/long_inputview_width"
                android:textSize="@dimen/management_text_size"
                android:layout_column="1"
                android:layout_gravity="right"
                android:layout_row="2" />

            <TextView
                android:id="@+id/tv_hall_city"
                android:text="@string/hall_city_label"
                android:layout_row="3"
                android:layout_column="0"
                style="@style/EditScreenTextViewStyle"
                android:textSize="@dimen/management_text_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/et_hall_city"
                style="@style/AppEditTextStyle"
                android:textSize="@dimen/management_text_size"
                android:layout_column="1"
                android:layout_gravity="right"
                android:layout_row="3" />

            <TextView
                android:id="@+id/tv_hall_official_website"
                android:text="@string/hall_official_website_label"
                android:layout_row="4"
                android:layout_column="0"
                android:textSize="@dimen/management_text_size"
                style="@style/EditScreenTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/et_hall_website"
                android:layout_row="4"
                android:layout_column="1"
                android:layout_gravity="right"
                android:textSize="@dimen/management_text_size"
                style="@style/AppLongEditTextStyle" />

            <TextView
                android:id="@+id/tv_hall_rows"
                android:text="@string/hall_rows_label"
                android:layout_row="5"
                android:layout_column="0"
                style="@style/EditScreenTextViewStyle"
                android:textSize="@dimen/management_text_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/et_hall_rows"
                android:layout_row="5"
                android:layout_column="1"
                android:layout_gravity="right"
                android:inputType="number"
                android:digits="0123456789"
                android:textSize="@dimen/management_text_size"
                style="@style/AppEditTextStyle" />

            <TextView
                android:id="@+id/tv_hall_columns"
                android:text="@string/hall_columns_label"
                android:layout_row="6"
                android:layout_column="0"
                style="@style/EditScreenTextViewStyle"
                android:textSize="@dimen/management_text_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/et_hall_columns"
                android:layout_row="6"
                android:layout_column="1"
                android:layout_gravity="right"
                android:inputType="number"
                android:digits="0123456789"
                android:textSize="@dimen/management_text_size"
                style="@style/AppEditTextStyle" />

            <Button
                android:id="@+id/bt_save_hall"
                android:layout_row="7"
                android:layout_marginTop="@dimen/triple_tab_margin"
                android:layout_marginBottom="4dp"
                android:layout_column="0"
                android:layout_columnSpan="2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/save_hall_button" />

        </GridLayout>
    </ScrollView>
</layout>