<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="app.com.almogrubi.idansasson.gettix.PaymentActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="3dp"
            android:layout_marginStart="4dp">

            <TextView
                android:id="@+id/tv_event_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/tab_margin"
                android:layout_marginTop="@dimen/tab_margin"
                android:layout_gravity="end"
                android:textDirection="anyRtl"
                android:textSize="@dimen/large_text_size"
                android:textStyle="italic"
                tools:text="אביתר בנאי: 'תנועה' מופע סולו" />

            <TextView
                android:id="@+id/tv_tickets_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/tab_margin"
                android:layout_marginBottom="0dp"
                android:textDirection="anyRtl"
                android:layout_gravity="end"
                android:textSize="@dimen/main_flow_text_size"
                android:textStyle="bold"
                tools:text="רכישת 2 כרטיסים: 240 ₪" />

            <TextView
                android:id="@+id/tv_tickets_saved_message"
                android:text="@string/tickets_saved_message"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="@dimen/tab_margin"
                android:textSize="@dimen/small_text_size"
                style="@style/TextAppearance.AppCompat.Subhead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_personal_details_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.AppCompat.Headline"
                android:text="@string/personal_details_title"
                android:textStyle="italic"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="@dimen/tab_margin"
                android:layout_marginStart="@dimen/tab_margin" />

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:alignmentMode="alignBounds"
                android:layoutDirection="rtl"
                android:columnCount="2"
                android:rowCount="3">

                <TextView
                    android:id="@+id/tv_full_name"
                    android:text="@string/full_name_label"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:layout_gravity="end"
                    android:gravity="center"
                    android:layout_marginStart="@dimen/triple_tab_margin"
                    style="@style/EditScreenTextViewStyle"
                    android:textSize="@dimen/main_flow_text_size" />

                <EditText
                    android:id="@+id/et_full_name"
                    style="@style/AppEditTextStyle"
                    android:textSize="@dimen/management_text_size"
                    android:layout_marginStart="@dimen/triple_tab_margin"
                    android:inputType="textPersonName"
                    android:layout_row="0"
                    android:layout_column="1"
                    android:layout_gravity="end" />

                <TextView
                    android:id="@+id/tv_phone"
                    android:text="@string/phone_label"
                    android:layout_row="1"
                    android:layout_column="0"
                    android:layout_gravity="end"
                    android:gravity="center"
                    android:layout_marginStart="@dimen/triple_tab_margin"
                    style="@style/EditScreenTextViewStyle"
                    android:textSize="@dimen/main_flow_text_size" />

                <EditText
                    android:id="@+id/et_phone"
                    style="@style/AppEditTextStyle"
                    android:textSize="@dimen/management_text_size"
                    android:layout_marginStart="@dimen/triple_tab_margin"
                    android:inputType="phone"
                    android:layout_row="1"
                    android:layout_column="1"
                    android:layout_gravity="end" />

                <TextView
                    android:id="@+id/tv_email"
                    android:text="@string/email_label"
                    android:layout_row="2"
                    android:layout_column="0"
                    android:layout_gravity="end"
                    android:gravity="center"
                    android:layout_marginStart="@dimen/triple_tab_margin"
                    style="@style/EditScreenTextViewStyle"
                    android:textSize="@dimen/main_flow_text_size" />

                <EditText
                    android:id="@+id/et_email"
                    style="@style/AppEditTextStyle"
                    android:textSize="@dimen/management_text_size"
                    android:layout_marginStart="@dimen/triple_tab_margin"
                    android:inputType="textEmailAddress"
                    android:layout_row="2"
                    android:layout_column="1"
                    android:layout_gravity="end" />

            </GridLayout>

            <TextView
                android:id="@+id/tv_credit_card"
                android:text="@string/credit_card_label"
                android:layout_marginTop="@dimen/double_tab_margin"
                android:layout_marginEnd="@dimen/double_tab_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/EditScreenTextViewStyle"
                android:textSize="@dimen/main_flow_text_size" />

            <com.stripe.android.view.CardInputWidget
                android:id="@+id/credit_card_input_widget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/bt_place_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/tab_margin"
                android:layout_marginStart="@dimen/tab_margin"
                android:layout_marginTop="@dimen/quadruple_tab_margin"
                android:layout_marginBottom="@dimen/tab_margin"
                android:padding="@dimen/semidouble_tab_margin"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/place_order_button"
                android:textStyle="bold"
                android:background="@color/colorAccent"
                android:textColor="@color/White"
                android:textSize="@dimen/large_text_size" />

        </LinearLayout>
    </ScrollView>
</layout>
