<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    tools:context="app.com.almogrubi.idansasson.gettix.activities.ManagementActivity">

    <TextView
        android:id="@+id/tv_welcome_manager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.AppCompat.Headline"
        tools:text="שלום, עידן ששון"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bt_events"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/events_button"
        style="@style/AppButtonStyle"
        android:textStyle="bold|italic"
        android:background="@color/colorAccent"
        android:textColor="@color/White"
        android:textSize="@dimen/large_text_size"
        android:layout_marginStart="50dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="74dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome_manager" />

    <Button
        android:id="@+id/bt_halls"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/halls_button"
        style="@style/AppButtonStyle"
        android:textStyle="bold|italic"
        android:background="@color/colorAccent"
        android:textColor="@color/White"
        android:textSize="@dimen/large_text_size"
        android:layout_marginEnd="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="74dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome_manager" />

    <Button
        android:id="@+id/bt_reports"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reports_button"
        style="@style/AppButtonStyle"
        android:textStyle="bold|italic"
        android:background="@color/colorAccent"
        android:textColor="@color/White"
        android:textSize="@dimen/large_text_size"
        app:layout_constraintRight_toLeftOf="@+id/bt_events"
        android:layout_marginRight="@dimen/tab_margin"
        app:layout_constraintLeft_toRightOf="@+id/bt_halls"
        android:layout_marginLeft="@dimen/tab_margin"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/bt_events" />
</android.support.constraint.ConstraintLayout>
